# finspark

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  Dockerfile.backend  Dockerfile.frontend  Makefile  PROGRESS.md  README.md  adaptconfig.skill.md  alembic.ini  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml  railway.json  render.yaml
.claude/coordination/: LOG.md  TASKS.md
.github/workflows/: backend.yml  ci.yml  frontend.yml  integration.yml
alembic/: env.py
alembic/versions/: 3792e6554574_initial_schema.py  6b02bf242aec_add_contract_test_runs_table.py  a1b2c3d4e5f6_add_external_api_audits_table.py  a1b2c3d4e5f6_add_workflow_tables.py  f8af5a676619_add_api_call_logs_table.py  f98c690eeb83_initial_schema_with_users.py  fe47d6cf3638_initial_schema.py
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml  ruff.toml
backend/alembic/: env.py
backend/app/db/: __init__.py  session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 20250326_0001_a1b2c3d4e5f6_initial_schema.py  20250326_0002_b2c3d4e5f6a7_postgres_indexes.py
backend/app/db/models/: __init__.py  adapter.py  audit_log.py  base.py  configuration.py  hook.py  integration.py  mapping.py  tenant.py  test_result.py
backend/app/integrations/: __init__.py  base.py  config.py  metadata.py  types.py
backend/app/integrations/adapters/: __init__.py  credit_bureau.py  gst.py  kyc.py  payment_gateway.py  sms_gateway.py
backend/app/integrations/config_engine/: __init__.py  config_diff.py  config_generator.py  field_mapper.py  schema_transformer.py
backend/app/integrations/hooks/: __init__.py  builtin.py  engine.py
backend/app/integrations/registry/: __init__.py  registry.py
backend/app/schemas/: __init__.py  adapter.py  api.py  audit_log.py  common.py  configuration.py  document.py  tenant.py  test_result.py  version_comparison.py  webhook.py
backend/src/finspark/: __init__.py  main.py
backend/src/finspark/adapters/: base.py  http.py
backend/src/finspark/api/: deps.py
backend/src/finspark/api/v1/: router.py
backend/src/finspark/api/v1/endpoints/: adapters.py  audit.py  configurations.py  documents.py  health.py  hooks.py  simulations.py  tenants.py
backend/src/finspark/core/: config.py  db.py  exceptions.py  logging.py  security.py
backend/src/finspark/integrations/: types.py
backend/src/finspark/models/: __init__.py  adapter.py  audit_log.py  base.py  configuration.py  document.py  parsed_document.py  simulation.py
backend/src/finspark/schemas/: adapters.py  audit.py  common.py  configurations.py  documents.py  hooks.py  simulations.py  tenants.py
backend/src/finspark/services/: base.py  lifecycle.py
backend/src/finspark/services/config_engine/: __init__.py  field_mapper.py
backend/src/finspark/services/document_parser/: __init__.py  docx_parser.py  facade.py  heuristics.py  openapi_parser.py  pdf_parser.py
backend/src/finspark/services/llm/: client.py
backend/src/finspark/simulation/: __init__.py  contract.py  mock_server.py  reporter.py  rollback.py  sandbox.py  simulator.py  types.py  version_tester.py
backend/tests/: conftest.py  conftest.py.bak
backend/tests/integration/: test_api_config.py  test_api_documents.py  test_api_health.py  test_api_integrations.py  test_db_operations.py  test_full_workflow.py  test_health.py  test_mock_patterns.py  test_performance.py  test_simulation_e2e.py
backend/tests/unit/: test_async_patterns.py  test_config_generation.py  test_database.py  test_document_delete.py  test_document_parser.py  test_document_upload_security.py  test_example.py  test_factories.py  test_field_mapper_separation.py  test_finspark_document_parser.py  test_health.py  test_health_check.py  test_inline_schema_parser.py  test_lifecycle.py  test_llm_client.py  test_llm_client_singleton.py  test_llm_integration.py  test_model_indexes.py  test_schema_mapping.py  test_schema_validation.py  test_security_headers.py  test_simulation.py
docs/: AGENT_PERSONAS.md  API_AUDIT.md  API_REFERENCE.md  ARCHITECTURE.md  DISCUSSION.md  HOSTING_PLAN.md  PERSONAS.md  PLAYWRIGHT_PRD.md  PLAYWRIGHT_RESULTS.md  PROBLEM_ANALYSIS.md
docs/presentation/: adaptconfig_slides.tex  finspark_demo.tex
frontend/: Dockerfile  biome.json  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
infra/postgres/: init.sql
scripts/: demo.py  seed_data.py  skill_smoke.py  start-dev.sh  verify_perfect_kyc_simulation.py
src/finspark/: __init__.py  main.py
test_fixtures/: 01_simple_kyc_api.yaml  02_payment_gateway_api.yaml  03_account_aggregator_complex.yaml  05_perfect_kyc_api.yaml  06_currency_exchange_live.yaml
tests/: conftest.py  test_analytics_dashboard.py
tests/fixtures/: credit_bureau_brd.md  credit_bureau_openapi.yaml  credit_bureau_sow_excerpt.md  sample_brd.docx  sample_brd.txt  sample_openapi.yaml
tests/integration/: test_adapter_suggest_api.py  test_adapters_routes.py  test_adapters_suggest_route.py  test_api_endpoints.py  test_api_health.py  test_api_simulation.py  test_batch_operations.py  test_config_export.py  test_configurations_coverage.py  test_e2e_flow.py  test_full_workflow.py  test_lint_endpoint.py  test_mcp_bridge_integration.py  test_mcp_e2e.py  test_mcp_stdio.py  test_search_api.py  test_security_endpoint.py  test_simulations_chain.py  test_skill_api_surface.py  test_skill_smoke.py  test_transformation_runtime.py  test_webhooks.py
tests/test_confidence_validation/: test_validator.py
tests/test_contract_testing/: test_contract_tester.py
tests/test_external_audit/: test_external_audit.py
tests/test_observability/: test_call_logger.py  test_routes.py
tests/test_proxy/: test_auth_injector.py  test_circuit_breaker.py  test_router.py
tests/test_transformation/: test_engine.py  test_sandbox.py
tests/test_workflow/: test_engine.py  test_expression_eval.py  test_graph_validator.py  test_routes.py
tests/unit/: conftest.py  test_adapter_registry_coverage.py  (+60 more)
(+141 files in other folders)
