[project]
name = "finspark"
version = "0.1.0"
description = "AI-Assisted Integration Configuration & Orchestration Engine"
authors = [{name = "Akash", email = "akash@finspark.dev"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-docx>=1.0.0",
    "pypdf>=4.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "rapidfuzz>=3.0.0",
    "cryptography>=42.0.0",
    "pyjwt>=2.8.0",
    "python-jose[cryptography]>=3.3.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",
    "instructor>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finspark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short --cov=src/finspark --cov-report=term-missing"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "B008", "UP042", "B017", "A002", "F821", "A001", "N818", "SIM108", "SIM105", "TC002", "B007"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[tool.coverage.run]
source = ["src/finspark"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 40
show_missing = true
