[project]
name = "finspark-backend"
version = "0.1.0"
description = "FinSpark AI Integration Configuration Engine"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    # Validation & settings
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Document processing
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    # ML / embeddings
    "sentence-transformers>=3.3.1",
    # HTTP client
    "httpx>=0.28.0",
    # OpenAPI validation
    "openapi-spec-validator>=0.7.1",
    # Auth utilities
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Observability
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-httpx>=0.33.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.0",
    "types-passlib>=1.7.7",
    "types-python-jose>=3.3.4",
    "aiosqlite>=0.20.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finspark"]

# ---------------------------------------------------------------------------
# ruff — lint config lives in ruff.toml, formatter options duplicated here
# for editors that only read pyproject.toml
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP",
    "TCH", "ANN", "S", "N", "RUF", "SIM", "PTH", "PL",
]
ignore = ["ANN101", "ANN102", "ANN401", "S101", "S104", "PLR0913", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S", "PLR2004"]
"alembic/**" = ["ANN", "ERA001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/"]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "docx.*",
    "pypdf.*",
    "openapi_spec_validator.*",
    "passlib.*",
    "jose.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-q",
    # --timeout=60 is added by CI: uv run pytest --timeout=60 ...
    # Requires pytest-timeout in dev deps; omit here so bare pytest works too.
]
markers = [
    "unit: fast, isolated unit tests (no I/O)",
    "integration: tests that hit the database or external services",
    "slow: tests that take >5 s — excluded from default CI run",
    "timeout: per-test timeout in seconds (requires pytest-timeout)",
]
# Default: skip @slow tests unless -m slow is passed explicitly
# To run only fast tests: pytest -m 'not slow'
# To run all:            pytest -m ''

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
# Cover both the legacy app/ layout and the src/finspark layout
source = ["app", "src/finspark"]
branch = true
omit = [
    "*/alembic/*",
    "*/migrations/*",
    "tests/*",
    "*/conftest.py",
    "*/main.py",           # entry-point boilerplate
]
parallel = true
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
precision = 2
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",              # stub bodies
    "pass$",
]

[tool.coverage.html]
directory = "htmlcov"
title = "FinSpark Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"
